# whispercpp

./: .bazelignore  .bazelrc  .clang-format  .gitattributes  .gitignore  .gitmodules  BUILD.bazel  DEVELOPMENT.md  Makefile  README.md  README.rst  SECURITY.md  WORKSPACE  package.json  pyproject.toml  requirements.bzl  setup.py  shell.nix  treefmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-repo/: action.yml
.github/workflows/: ci.yml  codeql.yml  scheduled-jobs.yml  style.yml  update-nixpkgs.yml  wheels.yml
examples/: BUILD  README.md  explore.py  explore_test.py
examples/bentoml/: requirements.txt  service.py
examples/bindings/: explore.py  explore_test.py
examples/stream/: stream.py
nix/: sources.json  sources.nix
requirements/: BUILD  base-requirements.in  dev-requirements.in  pypi.txt
requirements/release/: BUILD.bazel  requirements.txt  requirements_darwin.txt  requirements_windows.txt
rules/: BUILD  deps.bzl  python.bzl
samples/: BUILD
src/whispercpp/: BUILD  __init__.py  __init__.pyi  api.pyi  api_cpp2py_export.cc  api_cpp2py_export.h  api_export.cc  api_export.h  audio.cc  audio.h  audio.pyi  context.cc  context.h  helpers.cc  params.cc  utils.py
tests/: BUILD  README.md  conftest.py  context_export_test.py  export_test.py  params_export_test.py  utils_test.py
tools/: bazel  bazel.rc  cibw_before_build.sh  release  update-deps
typings/ffmpeg/: __init__.pyi
