load("@rules_python//python:pip.bzl", "compile_pip_requirements")

package(default_visibility = ["//visibility:__pkg__"])

# sets of *-requirements.in files to then be used by compile_pip_requirements
exports_files(glob(["*.txt"]))

extra_args = [
    "--allow-unsafe",
    "--resolver",
    "backtracking",
    "--no-annotate",
]

# This rule adds a convenient way to update the requirements.txt
# lockfile based on the requirements.in.
# Note that this rules will be used to distribute package with bazel.
compile_pip_requirements(
    name = "requirements",
    extra_args = extra_args,
    requirements_darwin = "requirements_darwin.txt",
    requirements_windows = "requirements_windows.txt",
    visibility = ["//:__subpackages__"],
)
